# matmult

./: CMakeLists.txt  Makefile  README.md  matmult-eigen-dense.cpp  matmult-eigen-sparse.cpp  matmult-eigen.cpp  matrix.c  onebankattack.sh  scipy_sparse.ipynb  test-transpose.sh
arduino/: main.cpp  platformio.ini
arduino/src/: main.cpp
linux/: Makefile
pico/: CMakeLists.txt  main.cpp
